Fixed broken style

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,9 +1,3 @@
-$body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-
-body {
-    font-family: $body-font;
-}
-
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -18,6 +12,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
+
 body {
   font-family: 'Merriweather', Georgia, serif;
   background-color: #eceff4;
@@ -52,11 +47,8 @@ pre {
 
 pre code {
     display: inline-block;
-    background-color: inherit;
     color: inherit;
 }
-
-
 
 code {
   font-family: 'Source Code Pro', monospace;
@@ -64,7 +56,6 @@ code {
   font-weight: 400;
   padding: 0.2rem 0.4rem 0.2rem 0.4rem;
 }
-
 
 h1,
 h2,
@@ -143,14 +134,12 @@ a {
     text-weight: bold;
 }
 
-
 .wrapper {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
 }
-
 
 .container {
     margin: 0 auto;
@@ -166,7 +155,6 @@ a {
     line-height: 1.3rem;
     margin-bottom: 1.5rem;
 }
-
 
 /* -- Navigation --  */ 
 
@@ -218,7 +206,8 @@ a {
 }
 
 pre, code, hljs {
-    background: #2e3440;
+    background-color: #2d2b57;
+    
 }
 
 .date {
